fix spacing between table and pagination (#12160)

--- a/airflow/www/static/css/dags.css
+++ b/airflow/www/static/css/dags.css
@@ -18,6 +18,7 @@
  */
 
 .dags-table-wrap {
+  margin-bottom: 16px;
   border-radius: 4px 4px 0 0;
   background-color: #f0f0f0;
 }
